<resources>
    <string name="app_name">drivebooster</string>

    <string-array name="user_type_array">
        <item>Pupil</item>
        <item>Instructor</item>
    </string-array>
    <string-array name="day_type_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="no_account_click_to_reg">No Account? Click here to register</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account? sign in</string>
    <string name="choose_instructor_text">choose instructor</string>
    <string name="no_instructors_available">No instructors available yet</string>
    <string name="create_booking">Create Booking</string>
    <string name="create_a_booking">Create a Booking</string>
    <string name="username">Username</string>
    <string name="user_email">user@email.com</string>
    <string name="user_address">User address</string>
    <string name="instructor_name">Instructor name</string>
    <string name="update_details">Update details</string>
    <string name="your_details">Your details</string>
    <string name="my_details">My details</string>
    <string name="home_text">Home</string>
    <string name="my_bookings">My Bookings</string>
    <string name="manoeuvres">Manoeuvres</string>
    <string name="get_my_coords">Get my Coordinates</string>
    <string name="name">Name: </string>
    <string name="email">Email: </string>
    <string name="address">Address: </string>
    <string name="instructor">Instructor: </string>
    <string name="my_pupils">My Pupils</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="api_key">AIzaSyDgxUH4MzNuwc5aICu55bb4f_thfS1ab_I</string>
    <string name="add_time">Add time</string>
    <string name="show_times_fragment">Show Times Fragment</string>
    <string name="set_up_times">Set up my times</string>
    <string name="set_time">Set time</string>
    <string name="submit_my_times">Submit Times</string>
    <string name="no_times_available">Times unavailable, try another day</string>
    <string name="previous_bookings">Previous Bookings</string>
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="set_up_times_title">My Schedule</string>
    <string name="booking_info_title">Booking Info</string>
    <string name="leave_a_review">Leave a review for this lesson</string>
    <string name="submit_review">Submit Review</string>
    <string name="remember_to_book">Please remember to book another lesson.</string>
    <string name="review_header">Review from instructor</string>
    <string name="upcoming_booking_title">Upcoming Booking</string>
    <string name="edit_booking">Edit Booking</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete_booking">Delete</string>
    <string name="confirm_deletion">Are you sure you want to delete this booking?</string>
    <string name="distance_to_you">Distance to you:</string>
    <string name="pupil_details">Pupil Details</string>
    <string name="pupil_details_address">Address</string>
    <string name="send_email">Send Email</string>
    <string name="remind_pupil">Remind Pupil</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_and_find_address">Find address and update</string>
    <string name="choose_instructor_to_continue">Choose Instructor to Continue</string>
    <string name="change_instructor">Change Instructor</string>
    <string name="instructor_radius_text">These instructors are within 10 kilometers of your chosen address</string>
    <string name="booking_theory">Book Theory Test</string>
    <string name="booking_driving">Book Practical Test</string>
    <string name="edit_details_title">Edit Details</string>
    <string name="pupil_no_upcoming_bookings">No Upcoming Bookings, book a lesson with your instructor</string>
    <string name="no_upcoming_bookings">No Upcoming Bookings, they will appear when pupils book lessons</string>
    <string name="no_previous_bookings">No Previous Bookings</string>
    <string name="user_has_no_number">This pupil has no phone number record, please email to remind them off the lesson</string>
</resources>