<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/homeFragment2">

    <fragment
        android:id="@+id/homeFragment2"
        android:name="com.personal.drivebooster.HomeFragment"
        android:label="@string/home_text"
        tools:layout="@layout/home_fragment"/>
    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.personal.drivebooster.CreateBookingFragment"
        android:label="@string/create_a_booking"
        tools:layout="@layout/fragment_create_booking_fragment" />
    <fragment android:id="@+id/navigation_my_details"
        android:name="com.personal.drivebooster.PupilDetailsFragment"
        android:label="@string/my_details"
        tools:layout="@layout/pupil_my_details_fragment"/>
</navigation>