<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/pupil_details_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/pupil_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pupil_details_name_title"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/pupil_details_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pupil_details_name_title"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/pupil_details_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pupil_details_email_title"
        app:layout_constraintTop_toBottomOf="@id/pupil_details_name"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/pupil_details_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pupil_details_email_title"
        android:text="@string/pupil_details_address"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/pupil_details_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pupil_details_address_title"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <fragment
        android:id="@+id/pupil_details_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pupil_details_address"/>

    <Button
        android:id="@+id/send_email_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/large_button_drawable"
        android:layout_marginTop="5dp"
        android:text="@string/send_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pupil_details_map"/>

</androidx.constraintlayout.widget.ConstraintLayout>