<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/pupil_booking_info_date_day"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/pupil_booking_info_date"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pupil_booking_info_date_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/pupil_booking_info_time"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pupil_booking_info_date"
        app:layout_constraintTop_toBottomOf="@id/pupil_booking_info_date_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/pupil_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/pupil_booking_info_date"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/instructor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/pupil_address"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/edit_booking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/instructor_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/edit_booking"
        android:background="@drawable/large_button_drawable"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/delete_booking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/instructor_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/delete_booking"
        android:background="@drawable/negative_button_drawable"
        android:textColor="@color/white"/>

    <com.harrywhewell.scrolldatepicker.DayScrollDatePicker
        android:id="@+id/info_horizontal_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/edit_booking_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/info_time_list_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:divider="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/info_horizontal_calendar"
        android:dividerHeight="2dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/booking_info_no_times_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_times_available"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_horizontal_calendar"/>

    <Button
        android:id="@+id/cancel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:visibility="invisible"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/info_time_list_view"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/submit_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/large_button_drawable"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:visibility="invisible"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/info_time_list_view"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>